Fix scrolling with keyboard Don't block overflow, only if it's a keypress

--- a/test/layouts/styles.css
+++ b/test/layouts/styles.css
@@ -8,7 +8,6 @@ body {
     padding:15px;
     background-color: aliceblue;
     overscroll-behavior: none;
-    overflow: hidden;
 }
 
 section, .lrud-container {
